--- a/render.yaml
+++ b/render.yaml
@@ -9,7 +9,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: bourbon-branch-db
+          name: bb-db
           property: connectionString
 
   - type: web
@@ -23,5 +23,5 @@ services:
         value: https://bourbon-branch-api.onrender.com
 
 databases:
-  - name: bourbon-branch-db
-    plan: free
+  - name: bb-db
+    plan: standard
